including in teaching

--- a/prosessi.tex
+++ b/prosessi.tex
@@ -137,4 +137,47 @@ ensin helpoin ja siirtyä sitten seuraavaksi helpompaan.
 
 \subsection{Opetukseen sisällyttäminen}
 
-% Videot yms. Caspersen kertonut tästä
+On erityisen tärkeää tuoda ongelmaratkaisuprosessi esille opetuksessa.
+Oppikirjoista ei voi opetella tätä vaan tarvitaan vaihtoehtoisia
+oppimateriaaleja \cite{Bennedsen:2008}.
+
+Liitutaulun käyttö on yleistä matematiikan opetuksessa ja sitä voi hyödyntää
+samoin ohjelmoinnin opetuksessa. Opiskelijat ovat mukana kehityksessä, joten he
+voivat kommentoida ja ohjata toteutusta. Ongelmana liitutaulun käytössä on se,
+että tila on todella rajallista, joten suurempia ohjelmia sillä ei voi esittää.
+
+Piirtoheittimen käyttö ratkaisee tilan puuteen, mutta valmiiksi tehtyihin
+kalvoihin opiskelijat eivät pääse vaikuttamaan. Ratkaisun esitystahti on
+haastava pitää sopivana, jotta opiskelijat ymmärtävät varmasti, mitä missäkin
+tehtiin ja miksi. Videotykiltä esitetyissä esimerkeissä on täsmälleen sama
+ongelma, joten uusi teknologia ei ratkaise ongelmaa tällä tavoin.
+
+Teknologia mahdollistaa tarvittavat olosuhteet. Liitutaulun käytössä opiskelijat
+otetaan mukaan ja piirtoheitinkalvoihin saa tarpeeksi isoja kokonaisuuksia.
+Tietokone ja videotykki mahdollistavat kehitystyökalujen käytön luennolla,
+jolloin opiskelijat näkevät oikeanlaista ohjelmointia ja voivat itse vaikuttaa
+lopputulokseen. Kuitenkin luento kestää vain määrätyn ajan, joten kauhean
+monimutkaisia ohjelmia ei voi esittää. Myöskin ohjelmointiprosessin näkee vain
+kerran eikä siihen voi palata kuten esimerkiksi kirjan esimerkkiin, jonka voi
+lukea monta kertaa.
+
+Onneksi nykyään luennot on mahdollista nauhottaa, jolloin opiskelijat voivat
+katsoa luentovideon moneen kertaan, kunnes ymmärtävät miten ohjelmointiprosessi
+toimi luennolla esitetyssä ongelmassa. Tämän jälkeen heidän on helppo palata
+tarkistamaan kehitysprosessin eteneminen, kun tehtäviä tehdessä tarvitsevat
+apua.
+
+On tärkeää, että videoissa on sisällysluettelo, jolloin opiskelijat löytävät
+helposti tarvitseman kohdan videosta. Mitä helpommin videoilta saa halutun
+tiedon, sitä vähemmän kirjallisesta materiaalista on tarve etsiä tiettyä asiaa.
+
+Liian käsikirjoitetut luennot ovat huonoja, sillä silloin tilanne ei vastaa
+todellisuutta ja opiskelijat voivat tylsistyä. Sopiva määrä improvisointia ja
+mahdolliset virheet ovat hyväksi, koska silloin nähdään, että ohjelmoidessa on
+luontaista tehdä välillä virheitä. Myös kääntäjän antamia virheilmoituksia on
+syytä käsitellä, jotta ymmärretään, mistä virheet johtuvat.
+
+Luennoilla on tärkeä näyttää myös refaktorointia. Aluksi tuetettu ratkaisu tekee
+asiansa, mutta se ei välttämättä ole puhtain mahdollinen. Refaktorointi on
+yleinen osa ohjelmointia, joten se tulee tuoda siten myös esille ja näyttää
+miten refaktoroidaan.
