--- a/thesis.bib
+++ b/thesis.bib
@@ -1,89 +1,105 @@
 @article{Astrachan:1995:ACA:199691.199694,
- author = {Astrachan, Owen and Reed, David},
- title = {AAA and CS 1: the applied apprenticeship approach to CS 1},
- journal = {SIGCSE Bull.},
- issue_date = {March 1995},
- volume = {27},
- number = {1},
- month = mar,
- year = {1995},
- issn = {0097-8418},
- pages = {1--5},
- numpages = {5},
- url = {http://doi.acm.org/10.1145/199691.199694},
- doi = {10.1145/199691.199694},
- acmid = {199694},
- publisher = {ACM},
- address = {New York, NY, USA},
+  author = {Astrachan, Owen and Reed, David},
+  title = {AAA and CS 1: the applied apprenticeship approach to CS 1},
+  journal = {SIGCSE Bull.},
+  issue_date = {March 1995},
+  volume = {27},
+  number = {1},
+  month = mar,
+  year = {1995},
+  issn = {0097-8418},
+  pages = {1--5},
+  numpages = {5},
+  url = {http://doi.acm.org/10.1145/199691.199694},
+  doi = {10.1145/199691.199694},
+  acmid = {199694},
+  publisher = {ACM},
+  address = {New York, NY, USA},
 }
 
 @inproceedings{Caspersen:2006:NPO:1176617.1176741,
- author = {Caspersen, Michael E. and K\"{o}lling, Michael},
- title = {A novice's process of object-oriented programming},
- booktitle = {Companion to the 21st ACM SIGPLAN symposium on Object-oriented programming systems, languages, and applications},
- series = {OOPSLA '06},
- year = {2006},
- isbn = {1-59593-491-X},
- location = {Portland, Oregon, USA},
- pages = {892--900},
- numpages = {9},
- url = {http://doi.acm.org/10.1145/1176617.1176741},
- doi = {10.1145/1176617.1176741},
- acmid = {1176741},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {CS1, UML, design by contract, incremental development, objects-first, pedagogy, programming education, programming process, refactoring, representation invariant, stepwise refinement, systematic programming, testing, top-down design},
+  author = {Caspersen, Michael E. and K\"{o}lling, Michael},
+  title = {A novice's process of object-oriented programming},
+  booktitle = {Companion to the 21st ACM SIGPLAN symposium on Object-oriented programming systems, languages, and applications},
+  series = {OOPSLA '06},
+  year = {2006},
+  isbn = {1-59593-491-X},
+  location = {Portland, Oregon, USA},
+  pages = {892--900},
+  numpages = {9},
+  url = {http://doi.acm.org/10.1145/1176617.1176741},
+  doi = {10.1145/1176617.1176741},
+  acmid = {1176741},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {CS1, UML, design by contract, incremental development, objects-first, pedagogy, programming education, programming process, refactoring, representation invariant, stepwise refinement, systematic programming, testing, top-down design},
 }
 
 @article{Gries:1974:WTI:953057.810447,
- author = {Gries, David},
- title = {What should we teach in an introductory programming course?},
- journal = {SIGCSE Bull.},
- issue_date = {February 1974},
- volume = {6},
- number = {1},
- month = jan,
- year = {1974},
- issn = {0097-8418},
- pages = {81--89},
- numpages = {9},
- url = {http://doi.acm.org/10.1145/953057.810447},
- doi = {10.1145/953057.810447},
- acmid = {810447},
- publisher = {ACM},
- address = {New York, NY, USA},
+  author = {Gries, David},
+  title = {What should we teach in an introductory programming course?},
+  journal = {SIGCSE Bull.},
+  issue_date = {February 1974},
+  volume = {6},
+  number = {1},
+  month = jan,
+  year = {1974},
+  issn = {0097-8418},
+  pages = {81--89},
+  numpages = {9},
+  url = {http://doi.acm.org/10.1145/953057.810447},
+  doi = {10.1145/953057.810447},
+  acmid = {810447},
+  publisher = {ACM},
+  address = {New York, NY, USA},
 }
 
 @inproceedings{Vihavainen:2011:EAM:1953163.1953196,
- author = {Vihavainen, Arto and Paksula, Matti and Luukkainen, Matti},
- title = {Extreme apprenticeship method in teaching programming for beginners},
- booktitle = {Proceedings of the 42nd ACM technical symposium on Computer science education},
- series = {SIGCSE '11},
- year = {2011},
- isbn = {978-1-4503-0500-6},
- location = {Dallas, TX, USA},
- pages = {93--98},
- numpages = {6},
- url = {http://doi.acm.org/10.1145/1953163.1953196},
- doi = {10.1145/1953163.1953196},
- acmid = {1953196},
- publisher = {ACM},
- address = {New York, NY, USA},
- keywords = {best practices, cognitive apprenticeship, continuous feedback, course material, instructional design, learning by doing, motivation, programming education},
+  author = {Vihavainen, Arto and Paksula, Matti and Luukkainen, Matti},
+  title = {Extreme apprenticeship method in teaching programming for beginners},
+  booktitle = {Proceedings of the 42nd ACM technical symposium on Computer science education},
+  series = {SIGCSE '11},
+  year = {2011},
+  isbn = {978-1-4503-0500-6},
+  location = {Dallas, TX, USA},
+  pages = {93--98},
+  numpages = {6},
+  url = {http://doi.acm.org/10.1145/1953163.1953196},
+  doi = {10.1145/1953163.1953196},
+  acmid = {1953196},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+  keywords = {best practices, cognitive apprenticeship, continuous feedback, course material, instructional design, learning by doing, motivation, programming education},
 }
 
 @incollection {Kolling:2008,
-   author = {Kölling, Michael and Barnes, David},
-   affiliation = {The University of Kent, Canterbury The Computing Laboratory Kent CT2 7NF United Kingdom},
-   title = {Apprentice-Based Learning Via Integrated Lectures and Assignments},
-   booktitle = {Reflections on the Teaching of Programming},
-   series = {Lecture Notes in Computer Science},
-   editor = {Bennedsen, Jens and Caspersen, Michael and Kölling, Michael},
-   publisher = {Springer Berlin / Heidelberg},
-   isbn = {978-3-540-77933-9},
-   keyword = {Computer Science},
-   pages = {17-29},
-   volume = {4821},
-   url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
-   year = {2008}
+  author = {Kölling, Michael and Barnes, David},
+  affiliation = {The University of Kent, Canterbury The Computing Laboratory Kent CT2 7NF United Kingdom},
+  title = {Apprentice-Based Learning Via Integrated Lectures and Assignments},
+  booktitle = {Reflections on the Teaching of Programming},
+  series = {Lecture Notes in Computer Science},
+  editor = {Bennedsen, Jens and Caspersen, Michael and Kölling, Michael},
+  publisher = {Springer Berlin / Heidelberg},
+  isbn = {978-3-540-77933-9},
+  keyword = {Computer Science},
+  pages = {17-29},
+  volume = {4821},
+  url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
+  year = {2008}
+}
+
+@incollection {Bennedsen:2008,
+  author = {Bennedsen, Jens and Caspersen, Michael},
+  affiliation = {IT University West Denmark},
+  title = {Exposing the Programming Process},
+  booktitle = {Reflections on the Teaching of Programming},
+  series = {Lecture Notes in Computer Science},
+  editor = {Bennedsen, Jens and Caspersen, Michael and Kölling, Michael},
+  publisher = {Springer Berlin / Heidelberg},
+  isbn = {978-3-540-77933-9},
+  keyword = {Computer Science},
+  pages = {6-16},
+  volume = {4821},
+  url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_2},
+  year = {2008}
 }
