XA pros and cons

--- a/xa.tex
+++ b/xa.tex
@@ -1,14 +1,34 @@
 \section{Kisällioppiminen}
 
-% Tämä kappale kertoo tktl:llä käytettävästä pajamallista
-
-Extreme Apprenticeship on Helsingin yliopiston tietojenkäsittelytieteen
+Extreme Apprenticeship (XA) on Helsingin yliopiston tietojenkäsittelytieteen
 laitoksella lanseerattu versio ohjelmoinnin kisällioppimisesta
-\cite{Vihavainen:2011:EAM:1953163.1953196}.
+\cite{Vihavainen:2011:EAM:1953163.1953196}. Kisällioppimisesta on useita eri
+muotoja, mutta XA:n pohjimmainen tavoite on todella paljon tehtäviä ja vähän
+luentoja.
 
-% Mitä ongelmia?
-% XA on liian extreme => seuraa ongelma
+Ohjelmointia voi oppia vain ohjelmoimalla, koska ohjelmointiprosessia ei voi
+oppia oppikirjasta lukemalla. Tässä XA on onnistunut todella hyvin. Tehtäviä on
+tosi monta ja ne täydentävät toisiaan. Toisaalta tehtävät on valmiiksi pilkottu
+pieniksi ongelmiksi, joten opiskelijat eivät pääse itse pilkkomaan alkuperäisiä
+ongelmia. Heidän on myöskin vaikea lähteä pilkkomaan pienempiä ongelmia vielä
+pienemmiksi.
 
-% Miten voidaan parantaa:
-% Luennollaa koodataan
-% Pajassa kysytään miksi toteutettu valitulla tavalla
+Pienien tehtävien taustalla on yksikkötestauksen helpottaminen. Tehtäviä varten
+on palautusautomaatti, joka pohjautuu yksikkötesteihin. Yksikkötestit tuovat
+opiskelijoille selkeän palautteen, toimiiko heidän ohjelmansa, ja
+tutkimustuloksia niiden hyödyllisyydestä opetuksessa on esitetty
+\cite{Bennedsen:2008}.
+
+Luentojen suhteen XA on liian raju. Ainoa tilaisuus, missä opiskelijoilla on
+mahdollisuus nähdä ja kysyä ohjelmointiprosessista, kisällioppimisessa on
+luento. Jos luentoja ei ole, niin opiskelijat kehittävät oman prosessinsa, joka
+aikaisemmin todettiin kohtalokkaaksi.
+
+Pajatilaisuuksissa on tärkeä seurata opiskelijoiden yleistä työskentelyä. On
+tärkeä selvittää, miten päädyttiin kyseiseen ongelmatilanteeseen, koska
+ongelmatilanteissa opiskelijat kysyvät apua. Myös toimivissa tilanteissa on
+tärkeä kysyä, miksi on toteutettu valitulla tavalla.
+
+Refaktorointi on syytä ottaa esille pajatilanteessa. Tehtävien pohjautuessa
+toisiinsa, on tärkeä refaktoroida välillä. Tällöin uusien ominaisuuksien tuonti
+vanhojen rinnalle on puhdasta ja vaivatonta.
