conclusion with necessary appendies

--- a/johtopaatos.tex
+++ b/johtopaatos.tex
@@ -1,1 +1,20 @@
 \section{Johtopäätös}
+
+Ohjelmoinnin opetuksessa on keskitytty kielenrakenteisiin ohjelmarakenteiden ja
+ongelmaratkaisuprosessin sijaan. Kisällioppiminen tuo tähän parannusta, mutta ei
+yksinään ratkaise kaikkea. Oikeanlaisilla tehtävillä ja ohjauksella
+pajatilanteesta saa täyden tehon irti.
+
+Luentojen rooli on edelleen todella tärkeä. Luennoilla ei riitä, että esitellään
+ohjelmointirakenteet ja valmis ratkaisu. On tärkeää tuoda ilmi koko prosessi
+ongelman analysoinnista oikeiden rakenteiden valitsemiseen ja valmiin ohjelman
+saamiseen usean refaktorointikierroksen jälkeen valmiiksi.
+
+Luennot on tärkeä videoida, jotta niihin voi palata jälkikäteen ja kerrata
+luennon asiat, kunnes ne ovat selviä. Eri ihmisillä kestää eri aika sisäistää
+asia ja omaan tahtiin kertaaminen on tällöin eduksi.
+
+Kaksisuuntainen palaute on tärkeää opintojen suunnittelussa. Opiskelija saa
+palautetta edistymisestään ja ohjaaja saa tiedon asioiden sisäistämisestä.
+Luentoja suunnitellessa tämä tieto on tärkeä, jotta voidaan keskittyä epäselviin
+asioihin.
