--- a/prosessi.tex
+++ b/prosessi.tex
@@ -165,7 +165,8 @@ Onneksi nykyään luennot on mahdollista nauhottaa, jolloin opiskelijat voivat
 katsoa luentovideon moneen kertaan, kunnes ymmärtävät miten ohjelmointiprosessi
 toimi luennolla esitetyssä ongelmassa. Tämän jälkeen heidän on helppo palata
 tarkistamaan kehitysprosessin eteneminen, kun tehtäviä tehdessä tarvitsevat
-apua.
+apua. Eri ihmisillä kestää eri aika sisäistää luennon asia, joten
+kertausmahdollisuus on eduksi.
 
 On tärkeää, että videoissa on sisällysluettelo, jolloin opiskelijat löytävät
 helposti tarvitseman kohdan videosta. Mitä helpommin videoilta saa halutun
