--- a/xa.tex
+++ b/xa.tex
@@ -32,3 +32,8 @@ tärkeä kysyä, miksi on toteutettu valitulla tavalla.
 Refaktorointi on syytä ottaa esille pajatilanteessa. Tehtävien pohjautuessa
 toisiinsa, on tärkeä refaktoroida välillä. Tällöin uusien ominaisuuksien tuonti
 vanhojen rinnalle on puhdasta ja vaivatonta.
+
+Kaksisuuntainen palaute on mahdollista kisälliopetuksessa. Opiskelija saa
+vastauksen kysymyksiinsä ja ohjaajat saavat tietoa eri asioiden sisäistämisestä.
+Tämä on erityisen tärkeä asia luentoja muodostaessa, sillä silloin voi
+palautteen pohjalta muodostaa entistä antoisampia luentoja.
