clean latex source

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,5 +1,6 @@
 \documentclass{tktltiki}
 \usepackage{lmodern}
+\usepackage{url}
 
 \author{Sami Saada}
 \title{Ohjelmointiin liittyvän ongelmaratkaisuprosessin tukeminen opetuksessa}
