--- a/thesis.bib
+++ b/thesis.bib
@@ -18,7 +18,7 @@
 }
 
 @inproceedings{Caspersen:2006:NPO:1176617.1176741,
-  author = {Caspersen, Michael E. and K\"{o}lling, Michael},
+  author = {Caspersen, Michael E. and Kölling, Michael},
   title = {A novice's process of object-oriented programming},
   booktitle = {Companion to the 21st ACM SIGPLAN symposium on Object-oriented programming systems, languages, and applications},
   series = {OOPSLA '06},
@@ -84,7 +84,7 @@
   keyword = {Computer Science},
   pages = {17-29},
   volume = {4821},
-  url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
+  url = {http://dx.doi.org/10.1007/978-3-540-77934-6_3},
   year = {2008}
 }
 
@@ -100,6 +100,6 @@
   keyword = {Computer Science},
   pages = {6-16},
   volume = {4821},
-  url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_2},
+  url = {http://dx.doi.org/10.1007/978-3-540-77934-6_2},
   year = {2008}
 }
