fixed typo: ongelmaratkaisu -> ongelmanratkaisu

--- a/johtopaatos.tex
+++ b/johtopaatos.tex
@@ -1,8 +1,8 @@
 \section{Johtopäätös}
 
 Ohjelmoinnin opetuksessa on keskitytty kielenrakenteisiin ohjelmarakenteiden ja
-ongelmaratkaisuprosessin sijaan. Kisällioppiminen tuo tähän parannusta, mutta ei
-yksinään ratkaise kaikkea. Oikeanlaisilla tehtävillä ja ohjauksella
+ongelmanratkaisuprosessin sijaan. Kisällioppiminen tuo tähän parannusta, mutta
+ei yksinään ratkaise kaikkea. Oikeanlaisilla tehtävillä ja ohjauksella
 pajatilanteesta saa täyden tehon irti.
 
 Luentojen rooli on edelleen todella tärkeä. Luennoilla ei riitä, että esitellään
