--- a/prosessi.tex
+++ b/prosessi.tex
@@ -1,13 +1,13 @@
-\section{Ongelmaratkaisuprosessi}
+\section{Ongelmanratkaisuprosessi}
 
-Tässä osiossa esittellään ensin yleinen ongelmaratkaisuprosessi, minkä jälkeen
+Tässä osiossa esittellään ensin yleinen ongelmanratkaisuprosessi, minkä jälkeen
 sitä sovelletaan ohjelmointiin.
 
-\subsection{Yleinen ongelmaratkaisuprosessi}
+\subsection{Yleinen ongelmanratkaisuprosessi}
 
-Yleistä ongelmaratkaisuprosessia on tutkittu pitkään ja se on sovellettavissa
+Yleistä ongelmanratkaisuprosessia on tutkittu pitkään ja se on sovellettavissa
 monelle alalle, myös ohjelmointiin. Descartes, Hyman ja Anderson ovat
-muodostaneet yleiselle ongelmaratkaisuprosessille rungon, jossa on
+muodostaneet yleiselle ongelmanratkaisuprosessille rungon, jossa on
 seuraavanlaisia piirteitä \cite{Gries:1974:WTI:953057.810447}.
 
 Mitään asiaa ei tule koskaan hyväksyä totena ellei sille ole varmaa ja
@@ -38,7 +38,7 @@ lävitse, jotta kokonaiskuva ongelmasta selviää. Tämän jälkeen ongelma on
 yksinkertaista jakaa moneen osaan.
 
 Esimerkiksi tutkielman kirjoittamiseen voi soveltaa yleistä
-ongelmaratkaisuprosessia. Ensin on saatava yleiskuva aiheesta. Kun on yleiskuva,
+ongelmanratkaisuprosessia. Ensin on saatava yleiskuva aiheesta. Kun on yleiskuva,
 niin siitä voi kaivaa esiin pääpiirteet. Pääpiirteet voidaan jakaa pienempiin
 alilukuihin. Lopuksi tehdään yhteenveto, jossa kerrataan ongelmakohdat ja
 kerrotaan niistä yleisellä tasolla, mutta siten, että se on tulkittavissa
@@ -46,17 +46,17 @@ oikein. Tässä on ensin jaettu isommat kokonaisuudet pienempiin ja vielä
 pienempiin osiin, jotka on sitten kirjoitettu auki. Lopuksi yhteenvedossa tehty
 päätelmä.
 
-Yleinen ongelmaratkaisuprosessi on sovellettavissa kaikkiin ongelmiin.
+Yleinen ongelmanratkaisuprosessi on sovellettavissa kaikkiin ongelmiin.
 
 \subsection{Ohjelmointiin soveltaminen}
 
-Yleinen ongelmaratkaisuprosessi on sovellettavissa ohjelmointiin ja sen
+Yleinen ongelmanratkaisuprosessi on sovellettavissa ohjelmointiin ja sen
 seuraaminen tuo ohjelmointiin määrätietoisuutta ja puhtautta.
 
 \subsubsection{Griesin analogia}
 
 Gries esittelee hyvän analogian ohjelmointiin liittyvästä
-ongelmaratkaisuprosessista \cite{Gries:1974:WTI:953057.810447}:
+ongelmanratkaisuprosessista \cite{Gries:1974:WTI:953057.810447}:
 
 \begin{quotation}
 ``Kaapinvalmistuskurssilla ohjaaja esittelee sahan, työtason, vasaran ja
@@ -68,7 +68,7 @@ kaappi. Ajattelisit ohjaajan olevan hullu!''
 Analogia kuvaa hyvin ohjelmoinnin opetusta. Opiskelijoille annetaan työkalut ja
 näytetään pari esimerkkiohjelmaa, mutta ei kerrota, miten esimerkkiohjelmat on
 toteutettu ja miksi. Tämän tyyppinen opetus rikkoo yleisen
-ongelmaratkaisuprosessin pääpiirteitä. Opiskelijoille tulee kuvata ensin
+ongelmanratkaisuprosessin pääpiirteitä. Opiskelijoille tulee kuvata ensin
 ongelma, sitten näyttää miten sitä lähdetään pilkkomaan pienempiin
 ongelmapalasiin. Tämän jälkeen tulee kertoa, mitä ohjelmointirakenteita
 käytetään minkäkin osaongelman kohdalla. Lopulta opiskelijalle on selvää, mistä
@@ -76,7 +76,7 @@ ohjelma koostuu ja miksi mikäkin rakenne on kuhunkin kohtaan valittu.
 
 \subsubsection{Mañana-periaate}
 
-Yksi tapa soveltaa yleistä ongelmaratkaisuprosessia on jakaa vaikeammat asiat
+Yksi tapa soveltaa yleistä ongelmanratkaisuprosessia on jakaa vaikeammat asiat
 aliohjelmakutsujen taakse ja toteuttaa varsinaiset aliohjelmat myöhemmin. Tähän
 ideaan pohjautuu Mañana-periaate \cite{Caspersen:2006:NPO:1176617.1176741}.
 Vaikea asia voi olla sellainen, johon ei keksi heti ratkaisua. Vaikeat asiat
@@ -98,7 +98,7 @@ oikeellisuus on helposti todistettavissa.
 \subsubsection{Järjestelmällinen ohjelman kasaaminen}
 
 Järjestelmällisen ohjelman kasaamisen näyttäminen opiskelijoille ohjaa
-systemaattiseen ajatteluun ja noudattaa yleistä ongelmaratkaisuprosessia.
+systemaattiseen ajatteluun ja noudattaa yleistä ongelmanratkaisuprosessia.
 Tanskassa on tutkittu tätä varsin hyvin tuloksin
 \cite{Caspersen:2006:NPO:1176617.1176741}.
 
@@ -137,7 +137,7 @@ ensin helpoin ja siirtyä sitten seuraavaksi helpompaan.
 
 \subsection{Opetukseen sisällyttäminen}
 
-On erityisen tärkeää tuoda ongelmaratkaisuprosessi esille opetuksessa.
+On erityisen tärkeää tuoda ongelmanratkaisuprosessi esille opetuksessa.
 Oppikirjoista ei voi opetella tätä vaan tarvitaan vaihtoehtoisia
 oppimateriaaleja \cite{Bennedsen:2008}.
 
