renamed johtopäätös to yhteenveto

--- a/johtopaatos.tex
+++ b/johtopaatos.tex
@@ -1,4 +1,4 @@
-\section{Johtopäätös}
+\section{Yhteenveto}
 
 Ohjelmoinnin opetuksessa on keskitytty kielenrakenteisiin ohjelmarakenteiden ja
 ongelmanratkaisuprosessin sijaan. Kisällioppiminen tuo tähän parannusta, mutta
