--- a/prosessi.tex
+++ b/prosessi.tex
@@ -97,6 +97,8 @@ oikeellisuus on helposti todistettavissa.
 
 \subsubsection{Järjestelmällinen ohjelman kasaaminen}
 
+\label{järjestelmällisyyteen pohjautuva ongelmanratkaisuprosessi}
+
 Järjestelmällisen ohjelman kasaamisen näyttäminen opiskelijoille ohjaa
 systemaattiseen ajatteluun ja noudattaa yleistä ongelmanratkaisuprosessia.
 Tanskassa on tutkittu tätä varsin hyvin tuloksin
@@ -182,3 +184,9 @@ Luennoilla on tärkeä näyttää myös refaktorointia. Aluksi tuetettu ratkaisu
 asiansa, mutta se ei välttämättä ole puhtain mahdollinen. Refaktorointi on
 yleinen osa ohjelmointia, joten se tulee tuoda siten myös esille ja näyttää
 miten refaktoroidaan.
+
+Olemassa olevan koodin lukeminen ja muokkaaminen ovat tavallisimpia tehtäviä
+kelle tahansa ohjelmoijalle \cite{Kolling:2008}. Oppimisen kannalta on suotavaa
+käydä lävitse muiden kirjottamaa koodia varhaisessa vaiheessa. Muiden koodin
+korjaaminen auttaa hahmottamaan, mitkä ovat hyviä käytäntöjä ja mitä hyötyä on
+siitä, että koodin ylläpidettävyys on hyvä.
