finalize johdanto for aine

--- a/johdanto.tex
+++ b/johdanto.tex
@@ -47,14 +47,14 @@ annettuja haasteita tai heille kehittyy oma prosessi
 johtaa epäpäteviin ja huonosti suunniteltuihin lopputuloksiin. Tämä johtuu
 siitä, että yleensä opiskelija valitsee ensimmäisen mieleen tulleen ratkaisun.
 Moni on tyytyväinen löydettyään edes yhden ratkaisun eivätkä ole halukkaita
-tutustumaan muihin ratkaisuvaihtoehtoihin. Jos ohjelmointikursseilla opetetaan
-järjestelmällisyyteen pohjautuvaa ongelmanratkaisuprosessia
-(käsitellään luvussa \ref{järjestelmällisyyteen pohjautuva
-ongelmanratkaisuprosessi}), niin se ei ainoastaan auta opiskelijoita kehittämään
-ratkaisuja vaan myös parantaa ratkaisujen laatua.
+tutustumaan muihin ratkaisuvaihtoehtoihin.
 
 Ohjelmoinnin oppiminen ei saa olla ainoana tavoitteena vaan myös koodin laadun
-kehitys on tärkeää.
+kehitys on tärkeää. Jos ohjelmointikursseilla opetetaan järjestelmällisyyteen
+pohjautuvaa ongelmanratkaisuprosessia (käsitellään luvussa
+\ref{järjestelmällisyyteen pohjautuva ongelmanratkaisuprosessi}), niin se ei
+ainoastaan auta opiskelijoita kehittämään ratkaisuja vaan myös parantaa
+ratkaisujen laatua.
 
 Luvussa 2 tarkastellaan ongelmanratkaisuprosessia ja sen soveltamista
 ohjelmointiin. Luvussa 3 tarkastellaan kisällioppimista.
