--- a/prosessi.tex
+++ b/prosessi.tex
@@ -11,11 +11,11 @@ muodostaneet yleiselle ongelmanratkaisuprosessille rungon, jossa on
 seuraavanlaisia piirteitä \cite{Gries:1974:WTI:953057.810447}.
 
 Mitään asiaa ei tule koskaan hyväksyä totena ellei sille ole varmaa ja
-perusteltua tietoa. Jos et tiedä asian paikkaansapitävyyttä, niin älä oleta sen
-olevan totta. Tästä on apua varsinkin silloin, kun etsit tietoa ongelmaan ja sen
-ratkaisutavoista. Tarkista huolella lähteiden taustat ennenkuin alat soveltamaan
-saamaasi tietoa. Korjaaminen voi olla haastavaa virheellisen tiedon soveltamisen
-jälkeen.
+perusteltua tietoa. Jos ei tiedä asian paikkaansapitävyyttä, niin ei pidä
+olettaa sen olevan totta. Tästä on apua varsinkin silloin, kun etsii tietoa
+ongelmaan ja sen ratkaisutavoista. Lähteiden taustat tulee tarkistaa huolella
+ennen kuin alkaa soveltamaan saamaansa tietoa. Korjaaminen voi olla haastavaa,
+kun on soveltanut virheellistä tietoa.
 
 Vaikeat asiat tulee jakaa niin moneen osaan kuin mahdollista. Pieniä asioita on
 helpompi hallita kuin isoja. Tämän seurauksena yhden ison ongelman sijaan on
@@ -27,26 +27,26 @@ Toiset ongelmat ovat haastavampia kuin toiset. Kannattaa ensin ratkaista helpot
 ongelmat ja sitten vaikeammat. Helpot ongelmat voivat olla nopeita ratkaista ja
 niiden ratkaiseminen tuo itsevarmuutta vaikeampien ongelmien parissa.
 
-Johtopäätöksestä tulee selvitä kattavasti ongelmaan liittyvät erinäiset seikat
-sekä sen tulee olla niin yleinen, ettei sitä tule jäättää huomiotta. Kaikki
-ongelmaan liittyvät asiat tulee esitellä ja ne tulee ilmaista siten, ettei niitä
-voi tulkita väärin. Tällöin johtopäätös on selkeästi esitetty ja yleisesti
-ymmärrettävissä.
+Johtopäätöksessä tulee ilmaista kaikki ongelmaan liittyvät seikat sekä sen tulee
+olla niin yleispätevä, ettei sitä voi sivuuttaa. Kaikki ongelmaan liittyvät
+asiat tulee esitellä ja ne tulee ilmaista siten, ettei niitä voi tulkita väärin.
 
 Aluksi on tärkeä käydä kaikki ongelman yksityiskohdat nopeasti moneen kertaan
-lävitse, jotta kokonaiskuva ongelmasta selviää. Tämän jälkeen ongelma on
-yksinkertaista jakaa moneen osaan.
+lävitse, jotta kokonaiskuva ongelmasta selviää. Esimerkiksi ruuanvalmistuksessa
+on syytä käydä kaikki vaiheet lävitse, jotta tietää mitä aineksia ja välineitä
+tarvitsee ostaa tai ottaa esille. Tämän jälkeen ongelma on yksinkertaista jakaa
+moneen osaan. Ruokareseptit on jaettu pienempiin yksinkertaisiin vaiheisiin.
 
 Esimerkiksi tutkielman kirjoittamiseen voi soveltaa yleistä
-ongelmanratkaisuprosessia. Ensin on saatava yleiskuva aiheesta. Kun on yleiskuva,
-niin siitä voi kaivaa esiin pääpiirteet. Pääpiirteet voidaan jakaa pienempiin
-alilukuihin. Lopuksi tehdään yhteenveto, jossa kerrataan ongelmakohdat ja
-kerrotaan niistä yleisellä tasolla, mutta siten, että se on tulkittavissa
-oikein. Tässä on ensin jaettu isommat kokonaisuudet pienempiin ja vielä
-pienempiin osiin, jotka on sitten kirjoitettu auki. Lopuksi yhteenvedossa tehty
-päätelmä.
-
-Yleinen ongelmanratkaisuprosessi on sovellettavissa kaikkiin ongelmiin.
+ongelmanratkaisuprosessia. Ensin on saatava yleiskuva aiheesta, joka tässä
+tapauksessa on: Tietokonepelien vaikutus opiskeluun. Kun on yleiskuva, niin
+siitä voi kaivaa esiin pääpiirteet, joita ovat esimerkiksi millaisia
+tietokonepelityyppejä on. Pääpiirteet voidaan jakaa pienempiin alilukuihin,
+kuten väkivaltaa sisältävät pelit ja opetuspelit. Lopuksi tehdään yhteenveto,
+jossa kerrataan ongelmakohdat ja tutkimustulokset sekä kerrotaan niistä
+yleisellä tasolla, mutta siten, että se on tulkittavissa oikein. Tässä on ensin
+jaettu isommat kokonaisuudet pienempiin ja vielä pienempiin osiin, jotka on
+sitten kirjoitettu auki.
 
 \subsection{Ohjelmointiin soveltaminen}
 
